---
source: book/tests/snapshot.rs
expression: "from e = employees\nderive gross_salary = (salary + payroll_tax)\nsort gross_salary\ntake 10\njoin d = department [==dept_no]\nselect [e.name, gross_salary, d.name]\n"
---
from e = employees
derive gross_salary = salary + payroll_tax
sort gross_salary
take 10
join d = department [==dept_no]
select [
  e.name,
  gross_salary,
  d.name,
]



